2004-06-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/ewmh_events.c (ewmh_WMStateMaxVert):
	(ewmh_WMStateMaxHoriz):
	fixed restart/maximized problem

	* libs/fvwmsignal.c (fvwmReapChildren):
	* fvwm/fvwm.c (ReapChildren):
	moved function to lib

2004-06-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/modconf.c (send_desktop_geometry):
	(send_color_limit):
	(send_click_time):
	(send_move_threshold):
	(send_ignore_modifiers):
	increased static buffer size

2004-06-13  Marcus Lundblad  <ml@update.uu.se>

	* libs/CombineChars.c (convert_to_ucs2):
	Replace illegal UTF-8 character sequences in input

2004-06-11  Scott Smedley  <scottie7@tpg.com.au>

	* libs/Bindings.c:
	bugfix: wrong stroke action being invoked.

2004-06-10  Scott Smedley  <scottie7@tpg.com.au>

	* fvwm/builtins.c:
	* fvwm/events.c:
	* libs/Bindings.c:
	Active _last_ matching binding. (ie. same behaviour as before
	win-specific bindings patch.)
	bugfix: segfault when looking up stroke bindings in root context.

2004-06-07  Scott Smedley  <scottie7@tpg.com.au>

	* fvwm/bindings.c:
	* fvwm/builtins.c:
	* fvwm/events.c:
	* fvwm/fvwm.1.in:
	* fvwm/module_interface.c:
	* libs/Bindings.c:
	* libs/Bindings.h:
	* modules/FvwmScript/FvwmScript.c:
	* modules/FvwmScript/Instructions.c:
	Implemented window-specific key/mouse bindings.

	* modules/FvwmIconBox/FvwmIconBox.h:
	* libs/fvwmlib.h:
	* libs/wild.c:
	* libs/wild.h:
	Make args to matchWildcards() const.

2004-06-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/ewmh_events.c (ewmh_WMStateFullScreen):
	use EWMH_fullscreen
	* fvwm/ewmh.c (EWMH_fullscreen):
	new function

	* fvwm/add_window.c (AddWindow):
	implemented MAXVERT, MAXHORIZ and FULLSCREEN initial EWMH states

	* fvwm/ewmh_events.c (ewmh_WMStateMaxHoriz):
	(ewmh_WMStateMaxVert):
	(ewmh_WMStateShaded):
	(ewmh_WMStateSticky):
	(ewmh_WMStateStaysOnBottom):
	fixed core dumps
	(ewmh_WMState):
	don't try to maximize window when looking up the style
	(ewmh_WMDesktop):
	(ewmh_WMStateFullScreen):