@@ -1,5 +1,8 @@
 2004-06-25  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/events.c (__cr_detect_icccm_move):
+	windows with ewmh hints are assumed to use icccm2 compliant movement
+
 	* fvwm/ewmh_events.c (ewmh_WMStateMaxVert):
 	(ewmh_WMStateMaxHoriz):
 	fixed restart/maximized problem
